# ChangeLog for dev-python/dnspython
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/dnspython/ChangeLog,v 1.93 2015/01/26 14:27:05 mrueg Exp $

  26 Jan 2015; Manuel Rüger <mrueg@gentoo.org> -dnspython-1.10.0-r1.ebuild,
  -dnspython-1.10.0.ebuild, -dnspython-1.9.4.ebuild:
  Remove old.

  11 Oct 2014; Ian Delaney <idella4@gentoo.org> dnspython-1.12.0.ebuild:
  tidy / fix to test phase, prompt from Arfrever

  14 Sep 2014; Agostino Sarubbo <ago@gentoo.org> dnspython-1.11.1.ebuild:
  Stable for ppc64, wrt bug #513558

  07 Sep 2014; Agostino Sarubbo <ago@gentoo.org> dnspython-1.11.1.ebuild:
  Stable for ppc, wrt bug #513558

*dnspython-1.12.0 (04 Sep 2014)

  04 Sep 2014; Ian Delaney <idella4@gentoo.org> +dnspython-1.12.0.ebuild:
  bump

  30 Aug 2014; Chema Alonso <nimiux@gentoo.org> dnspython-1.11.1.ebuild:
  Stable for amd64 wrt bug #513558

  02 Aug 2014; Raúl Porcel <armin76@gentoo.org> dnspython-1.11.1.ebuild:
  alpha/sparc stable wrt #513558

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> dnspython-1.11.1.ebuild:
  x86 stable wrt bug #513558

  24 Jun 2014; Markus Meier <maekke@gentoo.org> dnspython-1.11.1.ebuild:
  arm stable, bug #513558

  22 Jun 2014; Akinori Hattori <hattya@gentoo.org> dnspython-1.11.1.ebuild:
  ia64 stable wrt bug #513558

  17 Jun 2014; Jeroen Roovers <jer@gentoo.org> dnspython-1.11.1.ebuild:
  Stable for HPPA (bug #513558).

*dnspython-1.11.1 (21 Oct 2013)

  21 Oct 2013; Patrick Lauer <patrick@gentoo.org> +dnspython-1.11.1.ebuild:
  Bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> dnspython-1.10.0-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*dnspython-1.10.0-r1 (29 May 2013)

  29 May 2013; Ian Delaney <idella4@gentoo.org> +dnspython-1.10.0-r1.ebuild:
  revbump, migrate -> distutils-r1

  01 Dec 2012; Tim Harder <radhermit@gentoo.org> dnspython-1.9.4.ebuild,
  dnspython-1.10.0.ebuild:
  Fix LICENSE (bug #445412 by ulm).
