@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST dnspython-1.11.1.tar.gz 129573 SHA256 c0c6fcf3ff52939e7eadd931282d083271f65cf0a174555a703563a400289768 SHA512 03b2d35ae638a05d1af5458e88ab3450c1bf835a4e704b630474f32b8f93844b625ab2fc0000fdf2490bc90e3ec01f56175be130b5de996546c8bcebe57dfc05 WHIRLPOOL d2ad625278ed519c98d2c5612d1384ac06e65a9e9ab01c646e41a8377306a97cacd88c5e090f14a41f161c6fe3e52222314e8bed638316c07f80d5b035062d1e
 DIST dnspython-1.12.0.tar.gz 135164 SHA256 03fb82af866001c4afa58c48027bcc4b80bbf0a7f27e1d861cf06393eea4724f SHA512 583d069ed7ee9b20f16a964023fa0300f15032c27de6d084205f73394f19a2d5bb1641ef95b08a8ddf1f622eeb5fa8cbfa62b8a2ee478a49b0dff0995e4ae42e WHIRLPOOL abf515aad901b0c752a0f133c293654f60750522cee69985126547602f321f6577e135077cbfa330a30fbc838b125af30b75cbb4f8fdd60d1444b0bd2446bb39
+DIST dnspython3-1.12.0.zip 226945 SHA256 e9630946207864c7a780798809cd2ec9c6bbde6ac88b97a2fda66f018eec1c8d SHA512 02c61eb91c2e872f2c8fa0e09b88d593a067130b5ac3ea6eabd0abec413ecb6d3b7d5472ca502334f4c441af249511109006ae6a7b41d36ba1db3e777971b3ae WHIRLPOOL d3624f8545c607441931dcc71a1e43c83df6e1bd938222d52c8d798b342c4faf15f200bf1da7ea1fd59d2fe96e82644b22c8815764bf7d6304573deee6261f5a
 EBUILD dnspython-1.11.1.ebuild 1240 SHA256 e44ded29a866b283b281934905220e32e95b1b42d6ee37d5abd2887fd915643b SHA512 0f6599a81e57967e40f3bfe9f4d900a7b94ad782da41e064b7aef716aa5fd515b66ec05b00d6afef4d7fc3070c5b1d45960655ebdb27f1daba0dd3d647d1f832 WHIRLPOOL c21521335f47962431d0fcea1bd0faa9800bf410c236b521e70159c14f7d76fcab8c02e107689cec2ba6dea9799dff189767b150e3512b0f7571d82069ea8311
+EBUILD dnspython-1.12.0-r1.ebuild 1678 SHA256 b211ad77c15d51848b02066e253bd1a9dbff3780bb554101df4cef7d8910d945 SHA512 72e1d99bfee55ad278ec05831e650b5dbe40542bc88318ed03b0fd4afe3d97f49d594ffce05c60d7f181c75191c5e6ef35cb6593ca451ee6bdad7bb757b9a39e WHIRLPOOL decfa846f82f2b10646788c91b0025b5103073155372fb73b74a9c93ce48a7d37a22868cdec55a8276190be6292c7fa1752b5da5c879d5ab89173d3f9e39b5ba
 EBUILD dnspython-1.12.0.ebuild 1047 SHA256 27fa5b2409277b5aff7e2bf972367f8b710d193584865520821972a855d21c54 SHA512 9a71e942dfa5c21314fff49478c77d0a93c913495c082610d2e6efbea4dc40a4238389665b81ab2af794af2ec106de859a6eb7ab82d64082c12a2a2c3638aa81 WHIRLPOOL af41e2a27f35d94cdb647024ddb1093e20c09c0abcd0e19a0b57770485122e413b2148419b67cf9bdc199abece80a350d6722ea4b4fc4181f2063375cdbefd9f
-MISC ChangeLog 11142 SHA256 2c6560ac8d30d9e6a2e7d55341b8ffd33066d63efd2eef0f8768793f8be029a3 SHA512 528e7363a089e673e2d2f665beba455e80930df7dff5686f230f68b29072baf1327a630ec7dde36b5bc98c0bc48e3d30b198d80baa5d66caad1e6a69ecdba92f WHIRLPOOL 41a2f99379592fc272c28469b3534c6a965a3ff55ec966e06b16a8e674bf6fc4cb2e295aa94502d88794c2c274123e3071adab1a51879fa197107fc60951958f
+MISC ChangeLog 11585 SHA256 971956b76726ed701f39332fb107d7996040310f8d27c6aa6456140a167c148b SHA512 b4f6447efcbbb73f910b699bf8b6d1f4fe415d2a8501e8979221c3833a33e6b2c011d7e8632cafb54a2a71c63bc2280c34921a05c3d6cb3325b24accc7c3ccc1 WHIRLPOOL f55526e743477f0cee6d544eea5c73677df5095a9a7e00c4ac6fc1e61f2024efd020099705434e7b7184227598df7309d760772565b3435cfa8a32e81d3c96c5
 MISC metadata.xml 1301 SHA256 9e6cfdf51a2995ef9ad7df3a2fd664de677ec4ad5e9a6d6394d429d8af0818bd SHA512 6d2b209e37a8d0eff104b518cc11cb6889f1565747741123af033948afcff7efefe073b5917b9ec8fd638c079245e72c1d4783dedc12938767d09d3543df1e72 WHIRLPOOL 08aeee34d1f740ed2a4c4f3394bc692cc9352d93d011398fa90091f5620bbed292fd141a058a44a63c6d882a2cda67157f93c2bc9307b76cdcb94206f7e69623
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlT5kxIACgkQso7CE7gHKw3/VACeL0wV2mSS4Bssb3dkHs8SCVnC
+wCkAoJL5ohPbIwGdnwc8ywvxpVnuKmWH
+=oGsk
+-----END PGP SIGNATURE-----
