@@ -8,23 +8,25 @@ DIST menu-cache-1.0.0.tar.xz 261988 SHA256 ff7df437bbfd3119c5f662c6d209b98f15de0
 EBUILD menu-cache-0.3.3.ebuild 602 SHA256 b1c226d17e9694656145a5e93c739cd8723d0b695d5ae54b2c9ef30aeae8591e SHA512 bd75665ab803722aed63c4419e4c07fa864140c520d4b461a0ded8e25a5f0c3402d88cd5db42ab6508ef18fe7d1ac2e9a612221854aeaedc71d1cfd3504ee460 WHIRLPOOL 0b453f729b7752338158fb116d816d368049871e41ec556194c478ca173636334e142e7ff2cbf504cb16ebe76fc4b4061b86718c49921650902ee3c48e3a8fc5
 EBUILD menu-cache-0.4.1.ebuild 632 SHA256 39fefc6e7cae0ef566fd00779e6049219c408c69913ecfa1e18a968fd5511770 SHA512 f0ca6f5f4e0667b12ee198baa1678f57d4ea28f08799f287a91fd5a8df5c5b5462c2e984bc16dc165e41a082b936398e7af771c1895d84f2909d82afc3ffaf38 WHIRLPOOL c6c4425adcf446b231f6d194001a2f4d74ad09fb0268b212edb1866e2166cc978bd7df83d1e440e3af4bf5feeedbadf825040afac8886045c58ebc54969176da
 EBUILD menu-cache-0.5.1.ebuild 646 SHA256 3cdf46f14ebade749e087fc59ffb2076e1db8c5e97b0ce4a8d71095f8923f228 SHA512 73febe4284603bfe618d9a2607900066f7a94ffd0078b49bdd082861094a2cbee59283ceb691ea350976b7f81679b91ff68d75b3fe77572a545a5bf15337cddf WHIRLPOOL 9f1593a458bb3a5bf97dbc731865e315694e463b29698c7f8fbbf9ccd343a695711b0e0f54babb8cff4d821cc9b220a2b7a9c859d8e9955d0ad0e34ba73352c3
-EBUILD menu-cache-1.0.0.ebuild 671 SHA256 29739a2d64ce02b34077bbcf7f5836fc319ac6750a86f8d98d1844d595282eb3 SHA512 1d986985439ba526ab1259eac94cd16ecf442c80e473c942dd24d39d092c9034f9a6989fc76cd8f8eba213d7770415f6b0661f10e76683fb7a2d8d0074d827e6 WHIRLPOOL 7480f04903b1360040ffc8558f8260307f69f5343c7f687b41d5c693e1732d36825013ffb6f4452369445d25af6d5ea57c8e0174f34f890df7cea61da0593a95
-MISC ChangeLog 5070 SHA256 c272e0b463cc8e6c4e63635da0eac939ede85dbfbbe43c80cfecbd46f0832d89 SHA512 bcf92758cc2e8a5f83aeb1d297f2607487b3bed4a18ab2f50074d5ede666002531d11c5e932265f2b5770c9687c8fc3179dd30438a6ea6f8846804a254a023e7 WHIRLPOOL ea5943921bcd6ae98ba75ca8d7ea4c8a891abc8343111efc3b9742a792172990f46be8a1cfe5e34c4789511432610a4eb21cc5d4e01c2a044d37405616bf4ba5
+EBUILD menu-cache-1.0.0.ebuild 668 SHA256 f8440266e5d55616f026d9e5641ca37e8a7d097189071767c14c962ff6bc7e2f SHA512 463b22ccec1404df84aedb1f20d7b54acfd656a7e2e4ca8cc82f13e03aa792da356870da03af0b8c902bd5216a76d3f2b686299ce43fbc5e900aab0b2d67f34e WHIRLPOOL b1e82feac8f9bea616daac6ed50ba7912c25f5ee550bdbcc9568ab563374e72cf239e2dd652eccce8d633321421444c39b4ae177889790d9735c2df847e62aed
+MISC ChangeLog 5180 SHA256 78ecbca804c82635a38467e7db3b675782ffae6f047d40727d3a4da30559b9ab SHA512 7fd4f3ca2e94333f94ab271428c9a821cef3267785bac2f222f8899666fb23e1b61bc2dfbc6015d94dbfe7e36985078eae179f83d12bc382d6c9091f51f06c5a WHIRLPOOL 6ce302158519d5d678c1d0ecde619139d31ef3c65b2e6d019402b61140b9394490c6fc5b5e743a0d3d19549001127abdbc433aa1b1f0f9e226340795cfa85b12
 MISC metadata.xml 159 SHA256 09574ccad15f69d5367ecbb1a491cd636fb88582f69987d2ec217109dfe8befb SHA512 b4d06538d607c5ba81e0070475cd7d0a221b19e2adf740f479398a647c97350eb6d02b7db8bde107b0c369ce0058b8f0639468c0ca519ff585c555a0bfd4a381 WHIRLPOOL f5dfee2db356573e21cdb76ebcd11a61d2dc7f2b2b8458589cdabb1b2fd21f3261d0b40144b1417d433d1078a9c31a6b4562a914068719df66dfd4563714d9ab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJU+I5wAAoJENb1ecI556suWmQP/RS3odAs8QEDIHc8Aj9zdNEY
-gCcl9Hk2a+dBshLeJCeX9EiUI5T9tOT016F3uEE/YCRmgEHqimCgb+7mVlw/RBnM
-HhbBjW5fHnqD+1dOBz17SO1/0bF+/uLaLKaC4uk8xoz/yMSDEXCGWemk3RCmMjoB
-vqXY48KqWwhz/kSy6Mfjt90dB62/QOBDr7ZNLt1aEAlIN049vJF3td0Twhzj97b6
-/P7K77rAIfSdHyE56N8Q/49JgtX/761+BRUDUE+wd8OPGIo4pSECDkceSbFZSH3+
-0UjGziKx3wT+o/bJ8F5DezpyflBifMglqcPhoq+jlSWm3q4hYubxTF8Fi1Jit/bL
-YUehLefeUjuFhkqS5fb8554DwkR1xBVyeJ3WuMlAEXtijSL6xQU2JlJlIfDn8m6P
-BBAC8n82dNorWxybtdB7ysU8lHwYBEIR20nA0+KSEn/ZYzIHgrvIHzZcIW7UGT6G
-dEy3Gm9t0ieBATPLr8g0mdYXaRq98vg0AXyUumx6wCqtrWMB7NKqQzOC52k6LypZ
-trSmN7dT11i4cyfu7Y9nOK4eSotSI6g80+qIliAVPaUTmYKpSGrNcsEW0NRpOzCM
-nTyw23ShUa8qbnfp4btYWi/aHtQQZWwPb/7Lsz8RvRUpH4oMkft87cPDNawSDvGs
-CfyV1R890KrJQPKhd+RS
-=/TI9
+iQJ8BAEBCABmBQJU+ZXxXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOggQP/iuIJ7Izm4m5DuG3Lhafryer
+KqwiNYqJxUWrnTnTx7UsqnxrC3WRdoKBUrHFyI6W4YgjlnM/pPGzm19Tu0xdyhyp
+bsxCBLmtPTUr/A9PuRJ1wwE/4g2j+2kdl7uHt0JHZ2EVKFZmVU2dCwb0f4AEQgdL
+8G8+AvCBOL1R7SCY81sM4K8FqzRolZwW5o+hTN3imLXa0qvJY1BHzPEb2nfyPe+C
+1qvd6QQGQrUT+KEbUazqFiSyLlvuwboengvcSbAv/ofd14P1pApW2n/Nlg6K13PY
+h0XSvA1VouEFRIGeOegnsL0liRxyz7xgjztJU1Iy0p8mBbwKinLxAux7BpbLZVTs
+eQPq4+tMsI+A9DXxAZJgAHrDu1D2+TeBxb45jlGlWlPdJVEyJOCrkTtJu/uEJNy0
+KDRgf1E6zK4nUzHkvubpwUTNECEMzVGpoKNlVRP9oeVEAYYrOeiTQdKMl0PX2ylz
+QwjEkNCcyGe9c5OzA2l59XepStGkm1b2XOI9N9GTYlyk9TUMDAmwnrSxY4fT/jds
+sGsO69lB8K2BXVBJN3fPylfAZ0ZzK5pHZBKCz1umMk2oJIPzkBmlJ16fplpzxv5b
+wkKBhkl54lxCoczdrltZwuGgQdyculg5m/gs4oJrDu+hnAlYaZ8zkmmt8L5Dp0Nx
+6GMVC26ti8aTsaA7y0j0
+=Tt8P
 -----END PGP SIGNATURE-----
