@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/lxde-base/menu-cache/menu-cache-1.0.0.ebuild,v 1.2 2015/03/05 17:12:30 nullishzero Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/menu-cache/menu-cache-1.0.0.ebuild,v 1.3 2015/03/06 11:56:27 yngwin Exp $
 
 EAPI="5"
 
@@ -11,11 +11,11 @@ SRC_URI="mirror://sourceforge/lxde/${P}.tar.xz"
 LICENSE="GPL-2"
 # ABI is v2. See Makefile.am
 SLOT="0/2"
-KEYWORDS="~alpha ~amd64 ~arm ~mips ~ppc ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~mips ~ppc ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 RDEPEND="dev-libs/glib:2
-	x11-libs/libfm[gtk]"
+	x11-libs/libfm"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
 	virtual/pkgconfig"
