@@ -1,11 +1,11 @@
 DEFINED_PHASES=-
-DEPEND=dev-libs/glib:2 x11-libs/libfm[gtk] sys-devel/gettext virtual/pkgconfig
+DEPEND=dev-libs/glib:2 x11-libs/libfm sys-devel/gettext virtual/pkgconfig
 DESCRIPTION=A library creating and utilizing caches to speed up freedesktop.org application menus
 EAPI=5
 HOMEPAGE=http://lxde.sourceforge.net/
-KEYWORDS=~alpha ~amd64 ~arm ~mips ~ppc ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~mips ~ppc ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=dev-libs/glib:2 x11-libs/libfm[gtk]
+RDEPEND=dev-libs/glib:2 x11-libs/libfm
 SLOT=0/2
 SRC_URI=mirror://sourceforge/lxde/menu-cache-1.0.0.tar.xz
-_md5_=98fd4914f951dd69260ccce67451b005
+_md5_=9a1754d63c2415bc51271be203c875cd
