@@ -10,4 +10,4 @@ RDEPEND=>=sys-apps/texinfo-4.7-r1 X? ( x11-libs/libX11 x11-libs/libXt x11-libs/l
 SLOT=0
 SRC_URI=mirror://gnu/groff/groff-1.22.3.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=e79d18adc6d845d0f3d70fedd4f57067
+_md5_=df6e8e6490ef49f97b28707658c88064
