@@ -8,23 +8,23 @@ DIST groff-1.22.1-japanese.patch.bz2 52968 SHA256 cbdfdd7981f4e4e99839218bb4a6bc
 DIST groff-1.22.2.tar.gz 4019913 SHA256 380864dac4772e0c0d7b1282d25d0c5fd7f63baf45c87c4657afed22a13d2076 SHA512 ea34db53f075b6816827b07ac3d6a19ed50529c939044337eb3124575ac3b41363e1d81bbd5bf552a7a10f6b1dd233d6e7acaf646e18cfe94464c59dc20ffe80 WHIRLPOOL 61f24635140f388672761822c696fb051fc26050da6d7d771a73af112f477cd65d934129786794cd39bc3dcb69a88c8dcb7e4739b980a73d68ec518f54aed861
 DIST groff-1.22.3.tar.gz 4188772 SHA256 3a48a9d6c97750bfbd535feeb5be0111db6406ddb7bb79fc680809cda6d828a5 SHA512 c526ab203d13a9c9d110bcd3149fe50d1cd0d309437e9e2731a7ce90d890507ebc0a2331899ecf4dba2938daa756b6094cf76fd347a0ded59797c70ccfd0c95c WHIRLPOOL 671b8f9641d5969d995616b7e7aaa5928cab9658b3017e1d87c39c507e32724350ab81f73475fc159bae0f305d106d944e490f1d7b53b8715a5367dc11140fdb
 EBUILD groff-1.22.2.ebuild 2771 SHA256 db08ef07ed6e33888c5662beba9a709f5b4e7c70a4e19d86b9f8a4cdbebe3683 SHA512 f4d200be1ddb1434132211b40196d5e8a185083552080ec6a615ee144380af46c088681a7b6bcc996688f08c3a5ae78b4136ecf14f2af8013a93ecc13623ef3f WHIRLPOOL cf73f61b0009850f619683e3ec5ce2d602bc1901373881b22a88c36380bb24d798b27e3d3d32c5a242b501981e8ebd81176dba0f4aaa028bf7da79332603bd9f
-EBUILD groff-1.22.3.ebuild 2477 SHA256 e6649fcfe16d131bcf8edb17180654b4316898eb3eaebed500358ccce63914b0 SHA512 f527d5e0d8160e7a3ebe04f715bab7f062a30a5ff450c184e121b035f06c8ccf2807a97c2feb5d74816458e929008bcf1ca1c24b03f9bdbde3f79c5576c540fa WHIRLPOOL ec0bb37df396e3a6ea785068fc98f99e9507b0c9e2039103a4dc628557e9ad6b62eb95cd2541fe520a9374aebaddd3044ca0979f602a427feed5b492d98e8172
-MISC ChangeLog 20236 SHA256 b4ebe1b16866953836851923c455a2fe6909da5ac94e645072cc151444f41f73 SHA512 d6ab306df1e9d6de1872559270c0aa6cca43d79067172942cf9e601f9a211e3efe0a67633d77e9f321f4c5ba91379c568265245a845106b5e7b60bfb1db93bd7 WHIRLPOOL 116a000c0dd21aaa7c86475e4ea7c16fff312f11cf577f05ad3bc665d766852b7e2e96760e401c220d4657b13311d07cc03ffc5f339377c1d68a7311b7d0c108
+EBUILD groff-1.22.3.ebuild 2404 SHA256 b5e545c7337191af19a7b8200ad476137ae90cac62683652c25651af0efbe2d3 SHA512 ec9ba687741fd0bcbdc2e766831e003093e349fa0ae2d2848e9563a39a7de916f913fcf603a7f0a9941deba2843b44aaa6768f1785517fbad5d3093ffe762633 WHIRLPOOL 4b4ef341da2a03abad967cf4c947a33ccd785dce5cfea5e0072efc2fa28d6671f76e5aef4295c91f1a485baef17355dbf91f8c04c762ccae6477feddc6db1780
+MISC ChangeLog 20376 SHA256 afe914b80ab00ef3294af07c4954ce479bc7961383cc154e5d6ddfd5ba29c3f9 SHA512 7bb243794dff4dd3253bb7d66edcaddb673fe86f88d1375966af206163301ae2dee7a3bc38c89375912d3333a8cc44979dc141dcae27e0546d41c2b5bf1fc002 WHIRLPOOL 469525a771ebd4a9f33ecebb71992a6c877194204477642a72ee9ca1338900a930a0e06f7c05423fa8c8d4e749f453b08925cb534c8d41e50551a1a41616a228
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUbHG1AAoJEPiazRVxLXTFw/AP/R9489uaEtGFn2C/XPlqiu14
-ZPmuCLbOrLiOr0vQN9YB5o3MI4RKMR4pU4JVsPEyZITjsG6OdYCzBGoUgRSJ0p6F
-ZgZirYTm5EbQk05L5jc9RxbZpIGeftG7p0sMlj462Kase/N7lj1CfS44tAISAyV7
-DepwY3YQhOTGqhWjYNCSCk3LFqjv/eOPXpcnz/mxDdd7SVV8Cg5GFI/qnMyUH+/J
-k8AbmmxghPG3T9AYAtzF2Mo53GyTZD+sW+kAY5LRcmp7AbQGGYdhEXhxIumUeA4L
-WS6wZ9wuRwsHmrEMm/ahLWLV5cQzenqt+pjvBXbfwkkCtTFbwbud70yB/+MUwgRo
-iwFdpwa+z9Jws/IRKBXmNnUED7OtvW6Y+nCxBZbi4lXJu+VAOmV3b0fg+y28HWKv
-o61Vdu7tvwyRqHCmew738OwRtHfur/dH4WGLdB1eFa85UjCVOodWiizOxeVX0oYq
-ZqXDOxpW6Ul0HFNWCaWE0HbWR6IvvYwI6tp1g2NnFEq4qlNTpsXGyx4H9QM8M7LN
-f4WghMpnH9euKF+NTtFtUifcmZfZOrhz/3TsS2cukZruc5vesaK3R8dlXf+VxY+R
-/kq6uQ6J2Oab7YeVqkxj6rpUylMnpZY85xmaN6hV1EXnstDKr3w0Fz1c7yIlcYm+
-K9wLkePBA1TwID/qOCvV
-=CXa5
+iQIcBAEBCAAGBQJU+ZPIAAoJEPGu1DbS6WIA5c4P/3nvd/CvUeppnmXkbmKwXp8B
+DjZQHDis77Lw5D9r4dc2LzFevMd5y2VikbeRVY+3NEgHoGiJD8p9Bh7uV3V5aNK5
+VlR9bDXeT+88eSRXFhUm392QHN0ryF3Kk5So8UfS+0uqtCq8FT64HK2PyIInRsXH
+LjBqir6dJyItEfOevRgW5JKmZ1+JwziIaiU9cNgYoSzVxTHO1DxHrMEKXjL/n902
+T7sBHLZve3Nb5RmDgwXsurQSiMzIMMxcrEvvkLzXF6UTccIzxL3q7PQt3vSBVGPn
+ClPgiQW+PDA1QAP1GgPqADe3ISfBEEd3AoIh4jgm6TLq6oozYkO6bUIRLUIdd8xf
+RajIahmR/jDbM7/UtyjHbtkmygHuhWXCSQm4sdnARiPfpvLth3VsdIsq8alHH/sd
+orLFZSD80z7wBy/RQ9aI8xywoFSFBCp3ARq9WVYR791Mn5G4tVL324r/UYgbqi3k
+PEFkHM4vdliHZ4lKIH8j+3PoijGmVViKs55lkowITxqWVT8MwtPFlMxJRmxxDSbS
+eeHO1nNv+OeZQLX/cfleAHSVftqlkC0b/0lmd59pbClsxG7tEB2g/5vtPFSCcyB6
+DsXz21f71nLhsWgujy6K1yc0VkuhWlb2dyJj+kaQdb/fJrynPzBxLB/gPlgssCSm
+whFU1GR9Lnuvz1KtdWzC
+=zQcF
 -----END PGP SIGNATURE-----
