@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/groff-1.22.3.ebuild,v 1.1 2014/11/19 10:32:20 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/groff-1.22.3.ebuild,v 1.2 2015/03/06 11:47:19 vapier Exp $
 
 EAPI="4"
 
@@ -74,8 +74,5 @@ src_install() {
 	dosym eqn /usr/bin/geqn
 	dosym tbl /usr/bin/gtbl
 
-	if ! use examples ; then
-		rm -rf "${ED}"/usr/share/doc/${PF}/examples
-		rm -f "${ED}"/usr/share/doc/${PF}/pdf/mom-pdf.pdf
-	fi
+	use examples || rm -rf "${ED}"/usr/share/doc/${PF}/examples
 }
