@@ -1,6 +1,9 @@
 # ChangeLog for lxde-base/menu-cache
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/lxde-base/menu-cache/ChangeLog,v 1.41 2015/03/05 17:12:30 nullishzero Exp $
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/menu-cache/ChangeLog,v 1.42 2015/03/06 11:56:27 yngwin Exp $
+
+  06 Mar 2015; Ben de Groot <yngwin@gentoo.org> menu-cache-1.0.0.ebuild:
+  drop unnecessary use dep on libfm[gtk]
 
   05 Mar 2015; Pavel Kazakov <nullishzero@gentoo.org> menu-cache-1.0.0.ebuild:
   Add dependency on libfm
